# hubbo-sso

./: .gitignore  Cargo.toml  README.md  config.yaml
src/: lib.rs  main.rs  server.rs
src/config/: mod.rs  parser.rs
src/constants/: mod.rs
src/db/: mod.rs
src/db/mongo/: mod.rs
src/model/: request.rs  response.rs
src/route/: ali_oauth2.rs  mod.rs  test_route.rs
src/utils/: cipher.rs  mod.rs  request.rs  web.rs
src/web/: mod.rs  model.rs
