[package]
name = "hubbo-sso"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
mongodb = { version = "3.2.2", features = ["zstd-compression"] }
tokio = { version = "1.44.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
futures-util = "0.3.31"
actix-rt = "2.10.0"
nacos-sdk = { version = "0.4.3", features = ["default"] }
serde_yaml = "0.9.34"
clap = { version = "4.5.32", features = ["derive"] }
