[package]
name = "hubbo-sso"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
mongodb = { version = "3.2.2", features = ["zstd-compression"] }
tokio = { version = "1.44.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
futures-util = "0.3.31"
actix-rt = "2.10.0"
nacos-sdk = { version = "0.4.3", features = ["default"] }
serde_yaml = "0.9.34"
clap = { version = "4.5.32", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
reqwest = { version = "0.12.15", features = ["json", "multipart", "gzip"] }
rsa = "0.9.8"
pkcs8 = "0.10.2"
rand = "0.8.0"
sha2 = "0.10.8"
anyhow = "1.0.97"
rand_chacha = "0.9.0"


[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package.num-bigint-dig]
opt-level = 3
